Доработка тестов