@@ -40,11 +40,12 @@ public class NonCommandHandler {
         State currentState = userStateCache.getUserState(userId);
         try {
             validationService.isValidComplexity(Integer.parseInt(complexity));
+            userStateCache.addParam(userId, complexity);
             List<String> params = userStateCache.getUserParams(userId);
-            params.add(complexity);
+
             userStateCache.setState(userId, nextState);
             if (nextState == NONE) {
-                String[] splitCommand = {Command.EDIT, params.get(0), complexity};
+                String[] splitCommand = {Command.EDIT, params.getFirst(), complexity};
 
                 return handlerMapper.getHandler(Command.GENERATE).handle(splitCommand, userId);
             }
